A lot of tweaks to list

--- a/cv.tex
+++ b/cv.tex
@@ -35,7 +35,7 @@
 \usepackage{marvosym} % Allows the use of symbols
 
 % PAGE GEOMETRY
-\usepackage[top=0.3cm, bottom=0.3cm, lmargin=0.5cm, rmargin=1.3cm,ignoreheadfoot]{geometry} % The page Geometry
+\usepackage[top=0.3cm, bottom=0.3cm, lmargin=0.4cm, rmargin=0.5cm,ignoreheadfoot]{geometry} % The page Geometry
 
 %----------------------------------------------------------------------------------------
 % CUSTOM ENVIRONMENTS
@@ -46,41 +46,23 @@
     \end{tabular}
 }
 
-\newcommand{\work}[3]{
-    \begin{tabular}{>{\raggedleft}p{2.2cm}|p{0.9\linewidth}}
-        \textsc{#1} & \textcolor{NavyBlue}{#2}
-                    \footnotesize{#3}
-    \end{tabular}
-}
-
-\newcommand{\project}[4]{
-    \begin{tabular}{p{0.85\linewidth}r}
-        \textcolor{NavyBlue}{#2} & \multicolumn{1}{m{3cm}}{\raggedleft \textsc{#1}}\\
-        #3
-    \end{tabular}
-    \begin{tabular}{p{\linewidth}}
-        \footnotesize{#4}
-    \end{tabular}
-    \vspace{-0.1cm}
-}
-
 \newcommand{\cproject}[5]{
-    \begin{tabular}{p{0.80\linewidth}r}
-        \textcolor{NavyBlue}{\small #2} & \multicolumn{1}{m{4cm}}{\raggedleft \small {\textsc{#1}}}\\
+    \begin{tabular}{p{0.60\linewidth}r}
+        \textcolor{NavyBlue}{\small #2} & \multicolumn{1}{m{7.3cm}}{\raggedleft \small {\textsc{#1}}}\\
         \small {#3} & \small {#4}
     \end{tabular}
-    \begin{tabular}{p{\linewidth}}
+    \begin{tabular}{p{0.98\linewidth}}
     \vspace{-0.3cm}
         \footnotesize {#5}
     \end{tabular}
     \vspace{-0.5cm}
 }
 
-\newcommand{\iproject}[3]{
-    \begin{tabular}{p{0.85\linewidth}r}
-        \textcolor{NavyBlue}{\small #2} & \multicolumn{1}{m{3cm}}{\raggedleft \small {\textsc{#1}}}\\
+\newcommand{\gitproject}[3]{
+    \begin{tabular}{p{0.60\linewidth}r}
+        \textcolor{NavyBlue}{\small #2} & \multicolumn{1}{m{7.3cm}}{\raggedleft #1}\\
     \end{tabular}
-    \begin{tabular}{p{\linewidth}}
+    \begin{tabular}{p{0.98\linewidth}}
     \vspace{-0.3cm}
         \footnotesize{#3}
     \end{tabular}
@@ -95,14 +77,14 @@
 }
 
 \newcommand{\itemlist}[1]{
-    \begin{tabular}{>{\raggedleft}p{1.6cm}p{0.9\linewidth}}
+    \begin{tabular}{>{\raggedleft}p{1.6cm}p{0.87\linewidth}}
         #1
     \end{tabular}
 }
 
 \newcommand{\skill}[2]{
-    \begin{tabular}{p{0.85\linewidth}r}
-        \small {#2} & \multicolumn{1}{m{3cm}}{\raggedleft \textsc{\small #1}}\\
+    \begin{tabular}{p{0.60\linewidth}r}
+        \small {#2} & \multicolumn{1}{m{7.3cm}}{\raggedleft \textsc{\small #1}}\\
     \end{tabular}
     \vspace{-0.5cm}
 }
@@ -152,9 +134,6 @@
 %----------------------------------------------------------------------------------------
 %   INTERESTS
 %----------------------------------------------------------------------------------------
-\highlight
-    {Interests}
-    {\small {Programming Languages, Networks and Systems, Security, Web-Development, Natural Language Processing}}
 
 %----------------------------------------------------------------------------------------
 %	EDUCATION
@@ -176,6 +155,20 @@
             \textsc{July 2011} & 10$^{th}$ Board, \textsc{ICSE} Board,
                                  \textbf{The Laurels School International}, Indore
                                & \textbf{95.4}\% \\
+
+        \end{tabular}
+    }
+
+%----------------------------------------------------------------------------------------
+%   RELEVANT COURSES
+%----------------------------------------------------------------------------------------
+\highlight
+    {Courses}
+    {\small
+        \begin{tabular}{p{16.5cm}}
+                Operating Systems, Computer and Internet Security, Networks,
+                Compilers, Principles of Programming Languages, Computer Organization,
+                Computing Lab I \& II, Algorithms I \& II\\
 
         \end{tabular}
     }
@@ -238,28 +231,6 @@
     }
 
 %----------------------------------------------------------------------------------------
-%   SCHOLASTIC ACHIEVEMENTS
-%----------------------------------------------------------------------------------------
-\section{Scholastic Achievements, Scholarships and Conferences}
-
-\itemlist {
-    \textsc{\small 2011-2014}   & Received an \textbf{A* grade}, for exceptional performance in
-                                    \textbf{Systems and Network Security};
-                                    \textbf{Computer Networks};
-                                    \textbf{Computer Organization};
-                                    \textbf{Logic for Computer Science};
-                                    \textbf{Fundamentals of Computing};
-                                    \textbf{Introduction to Philosophy} \\
-    \textsc{\small 2012-2013}   & \textbf{Academic Excellence Award}, IIT Kanpur. \\
-    \textsc{\small 2011-2012}   & \textbf{Academic Excellence Award}, IIT Kanpur. \\
-    \textsc{\small May 2011}    & Secured All India rank \textbf{1937} in Joint Entrance Exam (JEE) \\
-    \textsc{\small Jan 2011}    & Kishore Vaigyanik Protsahan Yojana (\textbf{KVPY}) Fellowship \\
-    \textsc{\small Jan 2010}    & Qualified \textbf{Regional Mathematics Olympiad} (RMO) \\
-    \textsc{\small Dec 2009}    & \textbf{CSIR Programme on Youth for Leadership in Science} held at Advanced Materials Research Institute, Bhopal\\
-}
-
-
-%----------------------------------------------------------------------------------------
 %  COURSE PROJECTS
 %----------------------------------------------------------------------------------------
 % \let\thefootnote\relax\footnote{Monsoon semester: July to November}
@@ -270,20 +241,34 @@
     {Monsoon 2014-2015}
     {Multi Factor Authentication in OpenVPN}
     {\textsc{\raggedright Mozilla Winter of Security}, Guillaume Destuynder and Professor Dheeraj Sanghi}
-    {\href{https://wiki.mozilla.org/Security/Mentorships/MWoS/2014/OpenVPN\_MFA} {[Project Wiki]} }
+    {\href{https://wiki.mozilla.org/Security/Mentorships/MWoS/2014/OpenVPN\_MFA} {[Wiki]} }
     {
       \begin{itemize}[leftmargin=0.5cm]
           \item One of the \textbf{eleven} projects to be selected as a part of Mozilla's Winter of Security Initiative 2014.
           \item The objective of the project is to implement true \textbf{arbitrary multi-factor authentication} support in
               \textbf{OpenVPN}; and to implement \textbf{session-support} for the additional factors.
+              \href{https://wiki.mozilla.org/Security/Mentorships/MWoS/2014/OpenVPN\_MFA} {[https://wiki.mozilla.org/Security/Mentorships/MWoS/2014/OpenVPN\_MFA]}
       \end{itemize}
+    }
+
+\cproject
+    {Winter 2013-2014}
+    {JavaScript to MIPS Compiler}
+    {\textsc{\raggedright Compilers}, Professor Subhajit Roy}
+    { \href{https://github.com/srijanshetty/javascript-compiler} {[GitHub]} }
+    {
+        \begin{itemize}[leftmargin=0.5cm]
+          \item Implemented an end-to-end ECMAScript 5.1 compiler for the MIPS architecture with support for first class
+          functions, anonymous functions, static types, type annotations, recursion and nested functions.
+          \href{https://github.com/srijanshetty/javascript-compiler} {[https://github.com/srijanshetty/javascript-compiler]}
+        \end{itemize}
     }
 
 \cproject
     {Winter 2013-2014}
     {Hindi author attribution}
     {\textsc{\raggedright Artificial Intelligence}, Professor Amitabha Mukherjee}
-    { \href{https://github.com/srijanshetty/author-attribution} {[Repository]} }
+    { \href{https://github.com/srijanshetty/author-attribution} {[GitHub]} }
     {
      \begin{itemize}[leftmargin=0.5cm]
          \item Presented a poster on Opinion Word Expansion and Target Extraction through Double Propogation, Guang Qin,
@@ -292,42 +277,31 @@
              Vibhuti Narayan, Premchand, Sarat Chattopadhyay and Dhamarvir Bharati.
          \item Clustered a sample set of multiple Hindi authors using K-means unsupervised clustering to achieve
              F-scores in the range of 90-97\% for each author.
-         \item Classified each author using Support Vector Machine Classification using Radial Basis Kernel function
+         \item Classified each author using Support Vector Machine using Radial Basis Kernel function
              and achieved an F-score of 90--95\% for each author.
          \item Performed Multiple Discriminant Analysis on the data for a quantitative comparison with word
              collocations; there was no appreciable difference in the results with the F-scores increasing only
              marginally.
+          \href{https://github.com/srijanshetty/author-attribution} {[https://github.com/srijanshetty/author-attribution]}
      \end{itemize}
-    }
-
-\cproject
-    {Winter 2013-2014}
-    {JavaScript to MIPS Compiler}
-    {\textsc{\raggedright Compilers}, Professor Subhajit Roy}
-    { \href{https://github.com/srijanshetty/javascript-compiler} {[Repository]} }
-    {
-        \begin{itemize}[leftmargin=0.5cm]
-          \item Implemented an end-to-end ECMAScript 5.1 compiler for the MIPS architecture with support for first class
-          functions, anonymous functions, static types, type annotations, recursion and nested functions.
-        \end{itemize}
     }
 
 \cproject
     {Monsoon 2013-2014}
     {NachOS}
     {\textsc{Operating Systems}, Professor Mainak Chaudhari}
-    {}
+    {\href{https://github.com/srijanshetty/} {[GitHub]} }
     {
      \begin{itemize}[leftmargin=0.5cm]
          \item Extended the standard system call library of NachOS and implemented system calls pertaining to Fork, Exec,
              Join, Yield, Sleep and Exit.
-             \href{https://github.com/srijanshetty/nachos-syscalls/}{[Repository]}
+             \href{https://github.com/srijanshetty/nachos-syscalls/}{[https://github.com/srijanshetty/nachos-syscalls]}
          \item Implemented process scheduling algorithms: UNIX Scheduling, First in First Out,
              Round Robin, Shortest Job First and Non-pre-emptive job scheduling to assess their relative performances.
-             \href{https://github.com/srijanshetty/nachos-scheduling}{[Repository]}
+             \href{https://github.com/srijanshetty/nachos-scheduling}{[https://github.com/srijanshetty/nachos-scheduling]}
          \item Programmed page replacement algorithms: Random Page Allocation, First in First Out,
              Least Recently Used(LRU) and LRU Clock to evaluate relative performances under difference scenarios.
-             \href{https://github.com/srijanshetty/nachos-final/}{[Repository]}
+             \href{https://github.com/srijanshetty/nachos-final}{[https://github.com/srijanshetty/nachos-final]}
       \end{itemize}
     }
 
@@ -335,11 +309,11 @@
     {Monsoon 2013-2014}
     {P2P File Sharing and Streaming and IP Spoofing}
     {\textsc{Computer Networks}, Professor Dheeraj Sanghi}
-    { \href{https://github.com/srijanshetty/nodesock} {[Repository]} }
+    { \href{https://github.com/srijanshetty/nodesock} {[GitHub]} }
     {
         \begin{itemize}[leftmargin=0.5cm]
             \item Conceived and implemented a peer-to-peer protocol for file and media transfer in Node.js to share
-                data over any LAN.
+                data over any LAN.  \href{https://github.com/srijanshetty/nodesock} {[https://github.com/srijanshetty/nodesock]}
             \item Generated raw IP packets with spoofed IP addresses to exploit test machines with ARP Poisoning,
                 Smurfing and SYN Flooding.
         \end{itemize}
@@ -357,17 +331,17 @@
        \end{itemize}
     }
 
-
 \cproject
     {Winter 2012-2013}
     {8-bit General Purpose Computer on a FPGA}
     {\textsc{Computer Organization}, Professor Subhajit Roy}
-    { \href{https://github.com/srijanshetty/220\_y11} {[Repository]} }
+    { \href{https://github.com/srijanshetty/220\_y11} {[GitHub]} }
     {
       \begin{itemize}[leftmargin=0.5cm]
           \item Designed and programmed a simple \textbf{Instruction set Architecture (ISA)} for a 8-bit General
               Purpose Computer with a \textbf{load-store}
-              architecture on \textbf{Xilinx Spartan 3 FPGA} using System Verilog.  Demonstrated recursion, looping and conditionals on the Computer by using a simple assembly language.
+              architecture on \textbf{Xilinx Spartan 3 FPGA} using System Verilog.  Demonstrated recursion, looping
+              and conditionals on the Computer by using a simple assembly language.
       \end{itemize}
     }
 
@@ -375,11 +349,12 @@
     {Winter 2012-2013}
     {Conference Dates Web Crawler}
     {\textsc{Computing Laboratory}}
-    {\href{https://github.com/srijanshetty/crawler} { [Repository] } }
+    {\href{https://github.com/srijanshetty/crawler} { [GitHub] } }
     {
       \begin{itemize}[leftmargin=0.5cm]
           \item Developed a \textbf{python based web crawler} to crawl paper submission deadlines for a given paper
               using BeautifulSoup and urllib.
+              \href{https://github.com/srijanshetty/crawler} { [https://github.com/srijanshetty/crawler] }
       \end{itemize}
     }
 
@@ -388,8 +363,8 @@
 %----------------------------------------------------------------------------------------
 \section{Independent Projects}
 
-\iproject
-    {\href{https://docs.google.com/document/d/1ZHO9w36aoq3oaZBR4Um1AOmDfiTDAEgM6baQAu3icw4/edit?usp=sharing}{\small [Documentation]} }
+\gitproject
+    {\href{http://bit.ly/pclubLinux}{\footnotesize{[http://bit.ly/pclubLinux]}}}
     {GNU/Linux Exploration, Programming Club, IIT Kanpur}
     {
       \begin{itemize}[leftmargin=0.5cm]
@@ -399,8 +374,8 @@
       \end{itemize}
     }
 
-\iproject
-    {\href{https://navya.github.io/oars}{\small [Website]}}
+\gitproject
+    {\href{https://navya.github.io/oars}{\footnotesize{[https://navya.github.io/oars]}}}
     {OARS}
     {
         \begin{itemize}[leftmargin=0.5cm]
@@ -409,23 +384,23 @@
         \end{itemize}
     }
 
-\iproject
-    {\href{https://github.com/srijanshetty/ShuffleRun} {\small [Repository]}}
-    {ShuffleRun}
-    {
-        \begin{itemize}[leftmargin=0.5cm]
-            \item Pitched ShuffleRun, a \textbf{music player} which selects tracks on the basis of the user's
-                \textbf{running speed}; recieved honourable mention at \textbf{Yahoo! HackU 2013}.
-        \end{itemize}
-    }
-
-\iproject
-    {\href{http://gyph2.herokuapp.com/} {\small [Website]}}
+\gitproject
+    {\href{http://gyph2.herokuapp.com} {\footnotesize{[http://gyph2.herokuapp.com]}}}
     {Get Your Personal Homepage (GYPH)}
     {
         \begin{itemize}[leftmargin=0.5cm]
             \item Eased the process of creating \textbf{minimalistic websites} for not-so-tech-savvy students by creating a
                 WYSIWG website \textbf{editor.}
+        \end{itemize}
+    }
+
+\gitproject
+    {\href{https://github.com/srijanshetty/ShuffleRun} {\footnotesize{[https://github.com/srijanshetty/ShuffleRun]}}}
+    {ShuffleRun}
+    {
+        \begin{itemize}[leftmargin=0.5cm]
+            \item Pitched ShuffleRun, a \textbf{music player} which selects tracks on the basis of the user's
+                \textbf{running speed}; recieved honourable mention at \textbf{Yahoo! HackU 2013}.
         \end{itemize}
     }
 
@@ -458,6 +433,27 @@
     }
 
 %----------------------------------------------------------------------------------------
+%   SCHOLASTIC ACHIEVEMENTS
+%----------------------------------------------------------------------------------------
+\section{Scholastic Achievements, Scholarships and Conferences}
+
+\itemlist {
+    \textsc{\small 2011-2014}   & Received an \textbf{A* grade}, for exceptional performance in
+                                    \textbf{Systems and Network Security};
+                                    \textbf{Computer Networks};
+                                    \textbf{Computer Organization};
+                                    \textbf{Logic for Computer Science};
+                                    \textbf{Fundamentals of Computing};
+                                    \textbf{Introduction to Philosophy} \\
+    \textsc{\small 2012-2013}   & \textbf{Academic Excellence Award}, IIT Kanpur. \\
+    \textsc{\small 2011-2012}   & \textbf{Academic Excellence Award}, IIT Kanpur. \\
+    \textsc{\small May 2011}    & Secured All India rank \textbf{1937} in Joint Entrance Exam (JEE) \\
+    \textsc{\small Jan 2011}    & Kishore Vaigyanik Protsahan Yojana (\textbf{KVPY}) Fellowship \\
+    \textsc{\small Jan 2010}    & Qualified \textbf{Regional Mathematics Olympiad} (RMO) \\
+    \textsc{\small Dec 2009}    & \textbf{CSIR Programme on Youth for Leadership in Science} held at Advanced Materials Research Institute, Bhopal\\
+}
+
+%----------------------------------------------------------------------------------------
 %   OTHER SKILLS
 %----------------------------------------------------------------------------------------
 
@@ -466,55 +462,52 @@
 \skill {\href{srijanshetty.quora.com} {[Blog]}}
        {Active blogger at \href{srijanshetty.quora.com} {srijanshetty.quora.com}}
 
-\iproject {\href{https://github.com/navya} {[Github]} }
-          {Hacker, Navya, FOSS Group IIT Kanpur}
-          {
-               \begin{itemize}[leftmargin=0.5cm]
-                   \item Promoted the \textbf{FOSS initiative} in campus by organizing \textbf{student lectures} and meet-ups.
-                   \item Built student-centric applications like \textbf{Course Search and Student Search}, to circumvent
-                       their legacy institute counterparts.
-               \end{itemize}
-          }
+\gitproject
+    {\href{https://github.com/navya} {\footnotesize{[https://github.com/navya]}}}
+    {Hacker, Navya, FOSS Group IIT Kanpur}
+    {
+        \begin{itemize}[leftmargin=0.5cm]
+            \item Promoted the \textbf{FOSS initiative} in campus by organizing \textbf{student lectures} and meet-ups.
+            \item Built student-centric applications like \textbf{Course Search and Student Search}, to circumvent
+                their legacy institute counterparts.
+        \end{itemize}
+    }
 
-\iproject {2014}
-          {Head, Major Events and Competitions, Antaragni '14}
-          {
-               \begin{itemize}[leftmargin=0.5cm]
-                    \item Orchestrated Roadtrip --- the National Campaign of Antaragni '14, under which national
-                        prelims for Nukkad, Dance, Quiz and Synchronicity were held in Pune, Mumbai, Chennai,
-                        Bangalore, Chandigarh, Bhopal, Lucknow, Kolkata, and Kanpur.
-                    \item Negotiated with leading academies of Dance, Musicals, and Fine Arts to provide mentorships,
-                        and other non-monetary incentives to the outstanding cultural performers in Antaragni
-                        under the banner of \textbf{Dream On} campaign.
-                    \item Coordinated the conduction of \textbf{fifty competitions and nine major events} with a team
-                        comprising of over \textbf{thousand volunteers}.  Initiated and organized Mr. \& Ms. Fresher's
-                        competition and introduced Chreo Night in Antaragni's arsenal of competitions.
-                    \item Organized a \textbf{blood donation camp} for the residents of IIT Kanpur to promote awarness
-                        about road accidents.  Mobilized information about \textbf{road safety} through infographics
-                        and questionnaires via Antaragni's nation wide social campaign \textbf{Zara Sambhal Ke}.
-               \end{itemize}
-          }
+\gitproject
+    {2014}
+    {Head, Major Events and Competitions, Antaragni '14}
+    {
+        \begin{itemize}[leftmargin=0.5cm]
+            \item Orchestrated Roadtrip --- the National Campaign of Antaragni '14, under which national
+                prelims for Nukkad, Dance, Quiz and Synchronicity were held in Pune, Mumbai, Chennai,
+                Bangalore, Chandigarh, Bhopal, Lucknow, Kolkata, and Kanpur.
+            \item Negotiated with leading academies of Dance, Musicals, and Fine Arts to provide mentorships,
+                and other non-monetary incentives to the outstanding cultural performers in Antaragni
+                under the banner of \textbf{Dream On} campaign.
+            \item Coordinated the conduction of \textbf{fifty competitions and nine major events} with a team
+                comprising of over \textbf{thousand volunteers}.  Initiated and organized Mr. \& Ms. Fresher's
+                competition and introduced Chreo Night in Antaragni's arsenal of competitions.
+            \item Organized a \textbf{blood donation camp} for the residents of IIT Kanpur to promote awarness
+                about road accidents.  Mobilized information about \textbf{road safety} through infographics
+                and questionnaires via Antaragni's nation wide social campaign \textbf{Zara Sambhal Ke}.
+        \end{itemize}
+    }
 
-\iproject {2013 -- 2014}
-          {Hospitality Coordinator, Antaragni '13}
-          {
-               \begin{itemize}[leftmargin=0.5cm]
-                   \item Chalked out the logistics of \textbf{hospitality and accommodation} of \textbf{1500 participants}
-                       with four other coordinators.
-                   \item Managed a team of \textbf{40 secretaries and 80 volunteers}, over a span of 8 months and ensured a
-                       flawless conduction of the festival.
-                   \item Handled security arrangements during the four days of the Festival from 24$^{th}$ to 27$^{th}$ October.
-               \end{itemize}
-          }
+\gitproject
+    {2013 -- 2014}
+    {Hospitality Coordinator, Antaragni '13}
+    {
+        \begin{itemize}[leftmargin=0.5cm]
+            \item Managed a team of \textbf{40 secretaries and 80 volunteers}, over a span of 8 months and ensured a
+                flawless conduction of the festival.
+            \item Chalked out the logistics of \textbf{hospitality and accommodation} of \textbf{1500 participants}
+                with four other coordinators.  Handled security arrangements during the four days of the
+                Festival from 24$^{th}$ to 27$^{th}$ October.
+        \end{itemize}
+    }
 
-\iproject {2013 -- 2014}
-          {Member, Gymkhana Review Committee (GRC)}
-          {
-               \begin{itemize}[leftmargin=0.5cm]
-                   \item Chaired the meetings on \textbf{Extended Orientation of Incoming Freshmen}.
-                       Contributed actively as a member of academic, senate and activities sub-committees of the GRC.
-               \end{itemize}
-          }
+\skill {2013 -- 2014}
+       {Member, Gymkhana Review Committee}
 
 \skill {2013 -- 2014}
        {Editor-in-chief, Vox Populi, the campus newsletter.}
@@ -528,18 +521,18 @@
 
 \section{Volunteer Work}
 
-\iproject {2014 -- 2015}
-          {Member, Institute Anti Ragging Committee}
-          {
-               \begin{itemize}[leftmargin=0.5cm]
-                   \item Appointed as a member of the Institute Anti Ragging Committee, \textbf{a 10 member committee} responsible
-                       for welfare of the newly admitted freshmen.
-                   \item Worked in tandem with the office of the Dean of Student Affairs, to organize sessions
-                       on \textbf{easing the transition of freshmen}.
-                   \item Ensured institute norms regarding humane treatment of freshmen are properly conveyed to all senior batches
-                       and worked towards the enforcement of those norms.
-               \end{itemize}
-          }
+\gitproject
+    {2014 -- 2015}
+    {Member, Institute Anti Ragging Committee}
+    {
+        \begin{itemize}[leftmargin=0.5cm]
+            \item Appointed as a member of the Institute Anti Ragging Committee, \textbf{a 10 member committee} responsible
+                for welfare of the newly admitted freshmen.
+            \item Worked in tandem with the office of the Dean of Student Affairs, to organize sessions
+                on \textbf{easing the transition of freshmen}.  Ensured institute norms regarding humane treatment
+                of freshmen are properly conveyed to all senior batches and worked towards the enforcement of those norms.
+        \end{itemize}
+    }
 
 \cproject {2013 -- 2014}
           {Tutor, English Proficiency Programme}
