MWoS -> Work Experience

--- a/cv.tex
+++ b/cv.tex
@@ -196,6 +196,20 @@
 %----------------------------------------------------------------------------------------
 
 \section{Work Experience}
+\cproject
+    {2014 - 2015}
+    {Multi Factor Authentication in OpenVPN}
+    {\textsc{\raggedright Mozilla Winter of Security}, Guillaume Destuynder and Professor Dheeraj Sanghi}
+    {\href{https://wiki.mozilla.org/Security/Mentorships/MWoS/2014/OpenVPN\_MFA} {[Wiki]} }
+    {
+      \begin{itemize}[leftmargin=0.5cm]
+          \item One of the \textbf{eleven} teams to be selected as a part of Mozilla's Winter of Security Initiative 2014.
+          \item The objective of the project is to implement true \textbf{arbitrary multi-factor authentication} support in
+              \textbf{OpenVPN}; and to implement \textbf{session-support} for the additional factors.
+              \href{https://wiki.mozilla.org/Security/Mentorships/MWoS/2014/OpenVPN\_MFA} {[https://wiki.mozilla.org/Security/Mentorships/MWoS/2014/OpenVPN\_MFA]}
+      \end{itemize}
+    }
+
 
 \cproject
       {May-July 2014}
@@ -236,20 +250,6 @@
 % \let\thefootnote\relax\footnote{Monsoon semester: July to November}
 % \let\thefootnote\relax\footnote{Winter Semester: January to April}
 \section{Course Projects}
-
-\cproject
-    {Monsoon 2014-2015}
-    {Multi Factor Authentication in OpenVPN}
-    {\textsc{\raggedright Mozilla Winter of Security}, Guillaume Destuynder and Professor Dheeraj Sanghi}
-    {\href{https://wiki.mozilla.org/Security/Mentorships/MWoS/2014/OpenVPN\_MFA} {[Wiki]} }
-    {
-      \begin{itemize}[leftmargin=0.5cm]
-          \item One of the \textbf{eleven} projects to be selected as a part of Mozilla's Winter of Security Initiative 2014.
-          \item The objective of the project is to implement true \textbf{arbitrary multi-factor authentication} support in
-              \textbf{OpenVPN}; and to implement \textbf{session-support} for the additional factors.
-              \href{https://wiki.mozilla.org/Security/Mentorships/MWoS/2014/OpenVPN\_MFA} {[https://wiki.mozilla.org/Security/Mentorships/MWoS/2014/OpenVPN\_MFA]}
-      \end{itemize}
-    }
 
 \cproject
     {Winter 2013-2014}
