--- a/cv.tex
+++ b/cv.tex
@@ -132,10 +132,6 @@
 \small
 
 %----------------------------------------------------------------------------------------
-%   INTERESTS
-%----------------------------------------------------------------------------------------
-
-%----------------------------------------------------------------------------------------
 %	EDUCATION
 %----------------------------------------------------------------------------------------
 
@@ -160,20 +156,6 @@
     }
 
 %----------------------------------------------------------------------------------------
-%   RELEVANT COURSES
-%----------------------------------------------------------------------------------------
-\highlight
-    {Courses}
-    {\small
-        \begin{tabular}{p{16.5cm}}
-                Operating Systems, Computer and Internet Security, Networks,
-                Compilers, Principles of Programming Languages, Computer Organization,
-                Computing Lab I \& II, Algorithms I \& II\\
-
-        \end{tabular}
-    }
-
-%----------------------------------------------------------------------------------------
 %   SKILL SET
 %----------------------------------------------------------------------------------------
 \highlight
@@ -189,6 +171,20 @@
                 & \textbf{Git} (Expert), \textbf{Shell Scripting} (Proficient), \textbf{Vim} (Expert),
                 \textbf{LaTeX} (Proficient)\\
             }
+    }
+
+%----------------------------------------------------------------------------------------
+%   RELEVANT COURSES
+%----------------------------------------------------------------------------------------
+\highlight
+    {Courses}
+    {\small
+        \begin{tabular}{p{16.5cm}}
+                Operating Systems, Computer and Internet Security, Networks,
+                Compilers, Principles of Programming Languages, Computer Organization,
+                Computing Lab I \& II, Algorithms I \& II\\
+
+        \end{tabular}
     }
 
 %----------------------------------------------------------------------------------------
@@ -319,17 +315,18 @@
         \end{itemize}
     }
 
-\cproject
-    {Monsoon 2013-2014}
-    {Prolog Shortest Paths and Erlang Traffic Server}
-    {\textsc{Principles of Programming Languages}, Professor Piyush Kurur}
-    {}
-    {
-       \begin{itemize}[leftmargin=0.5cm]
-           \item Implemented shortest path algorithm in Prolog using Logic Programming on the Delhi Metro route.
-           \item Implemented a simple traffic server in Erlang using message passing concurrency and tail call recursion.
-       \end{itemize}
-    }
+% \cproject
+%     {Monsoon 2013-2014}
+%     {Prolog Shortest Paths and Erlang Traffic Server}
+%     {\textsc{Principles of Programming Languages}, Professor Piyush Kurur}
+%     {}
+%     {
+%        \begin{itemize}[leftmargin=0.5cm]
+%            \item Implemented shortest path algorithm in Prolog using Logic Programming on the Delhi Metro route.
+%            \item Implemented a simple traffic server in Erlang using message passing concurrency and tail call recursion.
+%        \end{itemize}
+%     }
+%
 
 \cproject
     {Winter 2012-2013}
@@ -384,37 +381,34 @@
         \end{itemize}
     }
 
-\gitproject
-    {\href{http://gyph2.herokuapp.com} {\footnotesize{[http://gyph2.herokuapp.com]}}}
-    {Get Your Personal Homepage (GYPH)}
+\projectlist
+    {Hackathons}
     {
-        \begin{itemize}[leftmargin=0.5cm]
-            \item Eased the process of creating \textbf{minimalistic websites} for not-so-tech-savvy students by creating a
-                WYSIWG website \textbf{editor.}
-        \end{itemize}
-    }
+        \begin{tabular}{p{2cm}l}
+            \textbf{ShuffleRun}:
+            & Pitched ShuffleRun, a \textbf{music player} which selects tracks on the basis of the user's
+            running speed; recieved \\
+            & honourable mention at \textbf{Yahoo! HackU 2013}.
+            \href{https://github.com/srijanshetty/ShuffleRun} {https://github.com/srijanshetty/ShuffleRun]}\\
 
-\gitproject
-    {\href{https://github.com/srijanshetty/ShuffleRun} {\footnotesize{[https://github.com/srijanshetty/ShuffleRun]}}}
-    {ShuffleRun}
-    {
-        \begin{itemize}[leftmargin=0.5cm]
-            \item Pitched ShuffleRun, a \textbf{music player} which selects tracks on the basis of the user's
-                \textbf{running speed}; recieved honourable mention at \textbf{Yahoo! HackU 2013}.
-        \end{itemize}
-    }
+            \textbf{GYPH}:
+            & Eased the process of creating minimalistic websites for not-so-tech-savvy students
+            by creating a WYSIWG \\
+            & website \textbf{editor.} \href{http://gyph2.herokuapp.com/template1} {http://gyph2.herokuapp.com/template1}
+         \end{tabular}
+     }
 
 \projectlist
     {Projects on Github}
     {
-        \begin{tabular}{l}
-             \textbf{DS}: implementation of certain algorithms and data structures
+        \begin{tabular}{p{2cm}l}
+            \textbf{DS}: & implementation of certain algorithms and data structures
              \href{https://github.com/srijanshetty/DS} {https://github.com/srijanshetty/DS}\\
-             \textbf{Notes}: notes on computing and social sciences.
+             \textbf{Notes}: & notes on computing and social sciences.
              \href{https://github.com/srijanshetty/notes} {https://github.com/srijanshetty/notes}\\
-             \textbf{Dotfiles}: an opinionated work flow on Linux Systems.
+             \textbf{Dotfiles}: & an opinionated work flow on Linux Systems.
              \href{https://github.com/srijanshetty/dotfiles} {https://github.com/srijanshetty/dotfiles}\\
-             \textbf{Bash Scripts}: handy configurations and shortcuts for ZSH
+             \textbf{Bash Scripts}: & handy configurations and shortcuts for ZSH
              \href{https://github.com/srijanshetty/custom} {https://github.com/srijanshetty/custom}\\
          \end{tabular}
     }
@@ -422,12 +416,12 @@
 \projectlist
     {Web Development}
     {
-        \begin{tabular}{l}
-             \textbf{Udghosh '13}: The annual sports-fest of IIT Kanpur.
+        \begin{tabular}{p{2cm}l}
+            \textbf{Udghosh '13}: & The annual sports-fest of IIT Kanpur.
              \href{http://udghosh.srijanshetty.in}{http://udghosh.srijanshetty.in}\\
-             \textbf{ALI, Antaragni '14}: Antaragni Leadership Initiative.
+             \textbf{ALI '14}: & Antaragni Leadership Initiative.
              \href{http://ali.srijanshetty.in} {http://ali.srijanshetty.in}\\
-             \textbf{Junoon '14}: Eastern Band Competition, Antaragni '14.
+             \textbf{Junoon '14}: & Eastern Band Competition, Antaragni '14.
              \href{http://junoon.srijanshetty.in}{http://junoon.srijanshetty.in}\\
          \end{tabular}
     }
