--- a/cv.tex
+++ b/cv.tex
@@ -55,7 +55,7 @@
     \vspace{-0.3cm}
         \footnotesize {#5}
     \end{tabular}
-    \vspace{-0.5cm}
+    \vspace{-0.45cm}
 }
 
 \newcommand{\gitproject}[3]{
@@ -164,10 +164,10 @@
         \itemlist {
                 \textsc{\small Languages} %
                 & \textbf{JavaScript} (Expert), \textbf{Python} (Proficient), \textbf{C++} (Proficient),
-                \textbf{C\#} (Efficient), \textbf{C} (Proficient)\\
+                  \textbf{C} (Proficient)\\
                 \textsc{\small Web Dev} %
                 & \textbf{HTML5}, \textbf{CSS}, \textbf{SQL and NoSQL}, \textbf{AngularJS}, \textbf{Nodejs}\\
-                \textsc{\small Tools} %
+                  \textsc{\small Tools} %
                 & \textbf{Git} (Expert), \textbf{Shell Scripting} (Proficient), \textbf{Vim} (Expert),
                 \textbf{LaTeX} (Proficient)\\
             }
@@ -269,8 +269,8 @@
      \begin{itemize}[leftmargin=0.5cm]
          \item Presented a poster on Opinion Word Expansion and Target Extraction through Double Propogation, Guang Qin,
              Bing Liu, Jiajun Bu, Chun Chen that was nominated as the best poster by all students.
-         \item Generated a Hindi literature corpus consisting of works by Tagore,
-             Vibhuti Narayan, Premchand, Sarat Chattopadhyay and Dhamarvir Bharati.
+         % \item Generated a Hindi literature corpus consisting of works by Tagore,
+             % Vibhuti Narayan, Premchand, Sarat Chattopadhyay and Dhamarvir Bharati.
          \item Clustered a sample set of multiple Hindi authors using K-means unsupervised clustering to achieve
              F-scores in the range of 90-97\% for each author.
          \item Classified each author using Support Vector Machine using Radial Basis Kernel function
@@ -364,22 +364,20 @@
     {\href{http://bit.ly/pclubLinux}{\footnotesize{[http://bit.ly/pclubLinux]}}}
     {GNU/Linux Exploration, Programming Club, IIT Kanpur}
     {
-      \begin{itemize}[leftmargin=0.5cm]
-            \item Explored and documented the various facets of \textbf{GNU/Linux} like the file system,
-              process management, memory management, shell interface etc to serve as a reference for the
-              Student Community.
-      \end{itemize}
+        Explored and documented the various facets of \textbf{GNU/Linux} like the file system,
+        process management, memory management, shell interface etc to serve as a reference for the
+        Student Community.
     }
+\vspace{3mm}
 
 \gitproject
     {\href{https://navya.github.io/oars}{\footnotesize{[https://navya.github.io/oars]}}}
     {OARS}
     {
-        \begin{itemize}[leftmargin=0.5cm]
-            \item \textbf{Scraped} the institute \textbf{academic records} to create a database of all courses offered by the
-                institute to create an AngularJS based \textbf{course search} over the existing legacy course search.
-        \end{itemize}
+        \textbf{Scraped} the institute \textbf{academic records} to create a database of all courses offered by the
+        institute to create an AngularJS based \textbf{course search} over the existing legacy course search.
     }
+\vspace{3mm}
 
 \projectlist
     {Hackathons}
